# jpo2026

./: CMakeLists.txt  Doxyfile  README.md  REQUIREMENTS.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
html/: annotated.html  class_main_window-members.html  class_main_window.html  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  index.html  main_8cpp.html  mainwindow_8cpp.html  mainwindow_8cpp.js  mainwindow_8h.html  mainwindow_8h_source.html  namespace_ui.html  namespaces.html  navtreedata.js  navtreeindex0.js
html/search/: all_3.js  functions_0.js  functions_1.js  functions_4.js  searchdata.js
latex/: class_main_window.tex  files.tex  main_8cpp.tex  mainwindow_8cpp.tex  mainwindow_8h.tex  mainwindow_8h_source.tex  refman.tex
